docs/tests/parser/control_flow/invalid/IfMissingCloseParen.b
fn void test() {
    if (true {
    }
}
